--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="isabelcalzadilla.ioc.eac1_2_calzadilla_c">
 
+    <!--INDICACIÓN DE LOS PERMISOS PARA EJECUTAR CON LOS INTENTS : INTERNET, LLAMAR ECT-->
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
+
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
